# Tienda-ALOHA

./: .dockerignore  .env.example  .gitattributes  .gitignore  .replit  CLAUDE.md  Dockerfile  IMPROVEMENT_SUGGESTIONS.md  REPORTE_FINAL_TIENDITA_ALOHA.md  RESUMEN_CORRECCIONES_FINALES.md  __init__.py  add_toys.py  advanced_search.py  aloha_verification_report.json  apply_migration.py  apply_migration_toy_metadata.py  authentication_test_report.json  cache_system.py  checkout_debug.html  cookies.txt  create_db_tables.py  create_tables.py  create_tables_manually.py  diagnose_checkout_issue.py  docker-compose.yml  fix_db.py  init_database.py  init_db.py  insert_test_data.py  optimization_report.py  optimized_queries.py  pagination_helpers.py  promote_admin.py  pyproject.toml  pyvenv.cfg  requirements.txt  routes.py  run.py  run_app.py  scratchpad.md  (+7 more)
app/: __init__.py  app.py  balance.py  config.py  db_maintenance.py  errors.py  extensions.py  filters.py  forms.py  models.py  security.py
blueprints/: __init__.py  admin.py  admin_full.tmp  auth.py  shop.py  user.py
migrations/: add_center_model.py  add_status_to_order.py  ensure_user_email_nullable.py
orders/: order_1.txt  order_10.txt  order_11.txt  order_12.txt  order_13.txt  order_14.txt  order_15.txt  order_16.txt  order_17.txt  order_18.txt  order_19.txt  order_2.txt  order_20.txt  order_21.txt  order_22.txt  order_23.txt  order_24.txt  order_25.txt  order_26.txt  order_27.txt  order_28.txt  order_29.txt  order_3.txt  order_30.txt  order_31.txt  order_32.txt  order_33.txt  order_34.txt  order_35.txt  order_36.txt  (+11 more)
(+100 files in other folders)
