[project]
name = "repl-nix-tienditas-aloha-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "weasyprint>=62.3",
    "flask-login>=0.6.3",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.0.4",
    "flask-migrate>=4.0.7",
]
